--- a/swe645-angular.yaml
+++ b/swe645-angular.yaml
@@ -53,10 +53,10 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - name: https
-      port: 443
+    - name: http
+      port: 80
       protocol: TCP
-      targetPort: 8080
+      targetPort: 80
       nodePort: 31748
   selector:
     app: swe645-angular
