--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
     server {
     location /SWE645_RestBackend/ {
-        proxy_pass http://localhost:18080;
+        proxy_pass http://ec2-3-238-132-231.compute-1.amazonaws.com:31750;
     }
     location / {
 
