--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,9 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
     server {
-
+    location /student/ {
+        proxy_pass http://ec2-3-238-132-231.compute-1.amazonaws.com:31750/SWE645_RestBackend/student/;
+    }
     location / {
 
     }
