--- a/nginx.conf
+++ b/nginx.conf
@@ -29,8 +29,8 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
     server {
-    location ~ ^/student/(.*)$ {
-        proxy_pass http://ec2-3-236-215-25.compute-1.amazonaws.com:31750/student/$1?$args;
+    location ~ ^/SWE645_RestBackend/(.*)$ {
+        proxy_pass http://ec2-3-236-215-25.compute-1.amazonaws.com:31750/SWE645_RestBackend/$1?$args;
     }
     location / {
 
