--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,11 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
     server {
-    location /student/(.*)${
-        proxy_pass http://ec2-3-236-215-25.compute-1.amazonaws.com:31750/SWE645_RestBackend/$1?$args;
+    location /SWE645_RestBackend/ {
+            proxy_pass http://ec2-3-238-132-231.compute-1.amazonaws.com:31750;
+    }
+    location /student/ {
+        proxy_pass http://ec2-3-238-132-231.compute-1.amazonaws.com:31750/SWE645_RestBackend/student/;
     }
     location / {
 
