--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
-    #server {
+    server {
     #location /SWE645_RestBackend/ {
      #       proxy_pass http://ec2-3-238-132-231.compute-1.amazonaws.com:31750;
     #}
